overflow fix

--- a/css/home/realeza.css
+++ b/css/home/realeza.css
@@ -21,6 +21,7 @@
   gap: 12px;
   position: relative;
   margin-bottom: 16px;
+  overflow: hidden;
 }
 
 .carousel-realeza::before {
@@ -28,6 +29,7 @@
   position: absolute;
   inset: 0;
   width: 100%;
+  overflow: hidden;
   background: linear-gradient(271.8deg, #FAF3F2 5%, rgba(250, 243, 242, 0) 40%);
 }
 
